Closed
Bug 1062643
Opened 10 years ago
Closed 10 years ago
PROCESS-CRASH | /tests/dom/tests/mochitest/bugs/test_bug583225.html | application crashed [@ mozilla::BlockingResourceBase::CheckAcquire()]
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
RESOLVED
FIXED
mozilla35
People
(Reporter: mtseng, Assigned: mtseng)
References
Details
Attachments
(1 file)
841 bytes,
patch
|
nical
:
review+
|
Details | Diff | Splinter Review |
Enable touch caret and selection caret this crash will happen.
https://tbpl.mozilla.org/?tree=Try&rev=0ca253c83134
call stack:
23:22:03 INFO - 0 libxul.so!mozilla::BlockingResourceBase::CheckAcquire() [BlockingResourceBase.cpp:0ca253c83134 : 287 + 0x0]
23:22:03 INFO - r4 = 0x000001b8 r5 = 0x00000000 r6 = 0x476d8620 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb4638 lr = 0x40b6e40d pc = 0x40b6e0f0
23:22:03 INFO - Found by: given as instruction pointer in context
23:22:03 INFO - 1 libxul.so!mozilla::OffTheBooksMutex::Lock() [BlockingResourceBase.cpp:0ca253c83134 : 397 + 0x3]
23:22:03 INFO - r4 = 0x000001b8 r5 = 0x00000000 r6 = 0x476d8620 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb4658 pc = 0x40b6e40d
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 2 libxul.so!mozilla::BaseAutoLock<mozilla::Mutex>::BaseAutoLock [Mutex.h : 164 + 0x5]
23:22:03 INFO - r4 = 0xbecb4670 r5 = 0x00000000 r6 = 0x476d8620 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb4660 pc = 0x40b0b5f9
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 3 libxul.so!mozilla::layers::SharedBufferManagerChild::DropGrallocBuffer(mozilla::layers::MaybeMagicGrallocBufferHandle const&) [SharedBufferManagerChild.cpp:0ca253c83134 : 334 + 0x3]
23:22:03 INFO - r4 = 0x476d8674 r5 = 0x00000000 r6 = 0x476d8620 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb4670 pc = 0x410bc13d
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 4 libxul.so!mozilla::layers::ISurfaceAllocator::DropGrallocBuffer(mozilla::layers::MaybeMagicGrallocBufferHandle*) [ISurfaceAllocator.cpp:0ca253c83134 : 333 + 0x7]
23:22:03 INFO - r4 = 0x476d8620 r5 = 0x484430a0 r6 = 0x476d8620 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb4698 pc = 0x410bc171
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 5 libxul.so!mozilla::layers::GrallocTextureClientOGL::~GrallocTextureClientOGL [GrallocTextureClient.cpp:0ca253c83134 : 54 + 0x5]
23:22:03 INFO - r4 = 0x476d8620 r5 = 0x484430a0 r6 = 0x476d8620 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb46a0 pc = 0x410d2cfb
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 6 libxul.so!mozilla::layers::GrallocTextureClientOGL::~GrallocTextureClientOGL [GrallocTextureClient.cpp:0ca253c83134 : 56 + 0x3]
23:22:03 INFO - r4 = 0x476d8620 r5 = 0x476d8624 r6 = 0x476d8620 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb46b0 pc = 0x410d2d31
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 7 libxul.so!mozilla::AtomicRefCountedWithFinalize<mozilla::layers::TextureClient>::Release() [AtomicRefCountedWithFinalize.h : 65 + 0x9]
23:22:03 INFO - r4 = 0x00000001 r5 = 0x476d8624 r6 = 0x476d8620 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb46b8 pc = 0x4109af0d
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 8 libxul.so!std::stack<mozilla::RefPtr<mozilla::layers::TextureClient>, std::deque<mozilla::RefPtr<mozilla::layers::TextureClient>, std::allocator<mozilla::RefPtr<mozilla::layers::TextureClient> > > >::pop() [RefPtr.h : 301 + 0x5]
23:22:03 INFO - r4 = 0x477c7ac8 r5 = 0x477c7ac8 r6 = 0x4657fb94 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb46e0 pc = 0x4109b00b
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 9 libxul.so!mozilla::layers::TextureClientPool::Clear() [TextureClientPool.cpp:0ca253c83134 : 163 + 0x3]
23:22:03 INFO - r4 = 0x477c7a80 r5 = 0x477c7ac8 r6 = 0x4657fb94 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb46e8 pc = 0x410b2883
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 10 libxul.so!mozilla::layers::ClientLayerManager::ClearCachedResources(mozilla::layers::Layer*) [ClientLayerManager.cpp:0ca253c83134 : 621 + 0x5]
23:22:03 INFO - r4 = 0x4657fab0 r5 = 0x00000001 r6 = 0x4657fb94 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb46f8 pc = 0x4109fdaf
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 11 libxul.so!mozilla::layers::ClientLayerManager::~ClientLayerManager [ClientLayerManager.cpp:0ca253c83134 : 64 + 0x7]
23:22:03 INFO - r4 = 0x4657fab0 r5 = 0x4657fab0 r6 = 0x40245080 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb4710 pc = 0x410a0aeb
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 12 libxul.so!mozilla::layers::ClientLayerManager::~ClientLayerManager [ClientLayerManager.cpp:0ca253c83134 : 75 + 0x3]
23:22:03 INFO - r4 = 0x4657fab0 r5 = 0x4657fab0 r6 = 0x40245080 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb4720 pc = 0x410a0b7d
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 13 libxul.so!mozilla::layers::LayerManager::Release() [Layers.h:0ca253c83134 : 172 + 0x9]
23:22:03 INFO - r4 = 0x00000000 r5 = 0x4657fab0 r6 = 0x40245080 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb4728 pc = 0x410ba1a3
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 14 libxul.so!nsRefPtr<mozilla::layers::BasicLayerManager>::operator=(mozilla::layers::BasicLayerManager*) [nsAutoPtr.h : 839 + 0x3]
23:22:03 INFO - r4 = 0x457cbd3c r5 = 0x00000000 r6 = 0x00000000 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb4740 pc = 0x410ba1f5
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 15 libxul.so!nsBaseWidget::~nsBaseWidget [nsBaseWidget.cpp:0ca253c83134 : 212 + 0x7]
23:22:03 INFO - r4 = 0x457cbd00 r5 = 0x457cbd3c r6 = 0x00000000 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb4750 pc = 0x417b7c9d
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 16 libxul.so!nsWindow::~nsWindow [nsWindow.cpp:0ca253c83134 : 174 + 0x5]
23:22:03 INFO - r4 = 0x457cbd00 r5 = 0x457cbd00 r6 = 0x00000000 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb4760 pc = 0x417db431
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 17 libxul.so!nsWindow::~nsWindow [nsWindow.cpp:0ca253c83134 : 174 + 0x3]
23:22:03 INFO - r4 = 0x457cbd00 r5 = 0x457cbd00 r6 = 0x00000000 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb4768 pc = 0x417db441
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 18 libxul.so!nsBaseWidget::Release() [nsBaseWidget.cpp:0ca253c83134 : 85 + 0x9]
23:22:03 INFO - r4 = 0x00000001 r5 = 0x457cbd00 r6 = 0x00000000 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb4770 pc = 0x417b6075
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 19 libxul.so!nsCOMPtr<<unnamed>::IPrivateRemoteInputStream>::~nsCOMPtr + 0x15
23:22:03 INFO - r4 = 0x457cb8b4 r5 = 0x457cb8a0 r6 = 0x00000000 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb4790 pc = 0x40b09cdf
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 20 libxul.so!nsIWidget::~nsIWidget [nsIWidget.h : 664 + 0xd]
23:22:03 INFO - r4 = 0x457cb8a0 r5 = 0x457cb8a0 r6 = 0x00000000 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb4798 pc = 0x417b61e3
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 21 libxul.so!nsBaseWidget::~nsBaseWidget [nsBaseWidget.cpp:0ca253c83134 : 233 + 0x5]
23:22:03 INFO - r4 = 0x457cb8a0 r5 = 0x457cb8a0 r6 = 0x00000000 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb47a0 pc = 0x417b7cfb
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 22 libxul.so!nsWindow::~nsWindow [nsWindow.cpp:0ca253c83134 : 174 + 0x5]
23:22:03 INFO - r4 = 0x457cb8a0 r5 = 0x457cb8a0 r6 = 0x00000000 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb47b0 pc = 0x417db431
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 23 libxul.so!nsWindow::~nsWindow [nsWindow.cpp:0ca253c83134 : 174 + 0x3]
23:22:03 INFO - r4 = 0x457cb8a0 r5 = 0x457cb8a0 r6 = 0x00000000 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb47b8 pc = 0x417db441
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 24 libxul.so!nsBaseWidget::Release() [nsBaseWidget.cpp:0ca253c83134 : 85 + 0x9]
23:22:03 INFO - r4 = 0x00000001 r5 = 0x457cb8a0 r6 = 0x00000000 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb47c0 pc = 0x417b6075
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 25 libxul.so!nsCOMPtr<<unnamed>::IPrivateRemoteInputStream>::~nsCOMPtr + 0x15
23:22:03 INFO - r4 = 0x457cb60c r5 = 0x457cb600 r6 = 0x00000000 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb47e0 pc = 0x40b09cdf
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 26 libxul.so!nsIWidget::~nsIWidget [nsIWidget.h : 664 + 0x15]
23:22:03 INFO - r4 = 0x457cb600 r5 = 0x457cb600 r6 = 0x00000000 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb47e8 pc = 0x417b61eb
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 27 libxul.so!nsBaseWidget::~nsBaseWidget [nsBaseWidget.cpp:0ca253c83134 : 233 + 0x5]
23:22:03 INFO - r4 = 0x457cb600 r5 = 0x457cb600 r6 = 0x00000000 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb47f0 pc = 0x417b7cfb
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 28 libxul.so!nsWindow::~nsWindow [nsWindow.cpp:0ca253c83134 : 174 + 0x5]
23:22:03 INFO - r4 = 0x457cb600 r5 = 0x457cb600 r6 = 0x00000000 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb4800 pc = 0x417db431
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 29 libxul.so!nsWindow::~nsWindow [nsWindow.cpp:0ca253c83134 : 174 + 0x3]
23:22:03 INFO - r4 = 0x457cb600 r5 = 0x457cb600 r6 = 0x00000000 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb4808 pc = 0x417db441
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 30 libxul.so!nsBaseWidget::Release() [nsBaseWidget.cpp:0ca253c83134 : 85 + 0x9]
23:22:03 INFO - r4 = 0x00000001 r5 = 0x457cb600 r6 = 0x00000000 r7 = 0x40245080
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb4810 pc = 0x417b6075
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 31 libxul.so!nsCOMPtr<<unnamed>::IPrivateRemoteInputStream>::~nsCOMPtr + 0x15
23:22:03 INFO - r4 = 0x464574ec r5 = 0x464574c0 r6 = 0x40245080 r7 = 0xbecb4888
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb4830 pc = 0x40b09cdf
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 32 libxul.so!nsDeviceContext::~nsDeviceContext [nsDeviceContext.cpp:0ca253c83134 : 258 + 0x17]
23:22:03 INFO - r4 = 0x464574c0 r5 = 0x464574c0 r6 = 0x40245080 r7 = 0xbecb4888
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb4838 pc = 0x4104f22d
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 33 libxul.so!nsDeviceContext::Release() [nsDeviceContext.h : 41 + 0x3]
23:22:03 INFO - r4 = 0x00000000 r5 = 0x464574c0 r6 = 0x40245080 r7 = 0xbecb4888
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb4840 pc = 0x417b3ee3
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 34 libxul.so!nsRefPtr<nsDeviceContext>::operator=(nsDeviceContext*) [nsAutoPtr.h : 839 + 0x3]
23:22:03 INFO - r4 = 0x00000000 r5 = 0x45b87c18 r6 = 0x402b7000 r7 = 0xbecb4888
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb4858 pc = 0x41b25ff3
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 35 libxul.so!nsPresContext::cycleCollection::Unlink(void*) [nsAutoPtr.h : 1096 + 0x9]
23:22:03 INFO - r4 = 0x45b87c00 r5 = 0x0000008a r6 = 0x402b7000 r7 = 0xbecb4888
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb4870 pc = 0x41b86967
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 36 libxul.so!nsCycleCollector::CollectWhite() [nsCycleCollector.cpp:0ca253c83134 : 3275 + 0xb]
23:22:03 INFO - r4 = 0x4306728c r5 = 0x0000008a r6 = 0x402b7000 r7 = 0xbecb4888
23:22:03 INFO - r8 = 0x00006122 r9 = 0x47dd3b1c r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb4880 pc = 0x40b2bbad
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 37 libxul.so!nsCycleCollector::Collect(ccType, js::SliceBudget&, nsICycleCollectorListener*) [nsCycleCollector.cpp:0ca253c83134 : 3605 + 0x5]
23:22:03 INFO - r4 = 0x402b7000 r5 = 0x00000000 r6 = 0xbecb8778 r7 = 0x00000001
23:22:03 INFO - r8 = 0x00000002 r9 = 0x00000000 r10 = 0x7fffffff fp = 0x40265140
23:22:03 INFO - sp = 0xbecb8748 pc = 0x40b2c4e3
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 38 libxul.so!nsCycleCollector::ShutdownCollect() [nsCycleCollector.cpp:0ca253c83134 : 3536 + 0xb]
23:22:03 INFO - r4 = 0x00000000 r5 = 0xbecb8778 r6 = 0x402b7000 r7 = 0x40eae8c5
23:22:03 INFO - r8 = 0x4271bcdc r9 = 0x01bb7b0c r10 = 0x40b3385d fp = 0x40265140
23:22:03 INFO - sp = 0xbecb8770 pc = 0x40b2c9d1
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 39 libxul.so!nsCycleCollector::Shutdown() [nsCycleCollector.cpp:0ca253c83134 : 3795 + 0x5]
23:22:03 INFO - r4 = 0x402b7000 r5 = 0x402b7000 r6 = 0x4271d36c r7 = 0x40eae8c5
23:22:03 INFO - r8 = 0x4271bcdc r9 = 0x01bb7b0c r10 = 0x40b3385d fp = 0x40265140
23:22:03 INFO - sp = 0xbecb8798 pc = 0x40b2ca1f
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 40 libxul.so!nsCycleCollector_shutdown() [nsCycleCollector.cpp:0ca253c83134 : 4250 + 0x9]
23:22:03 INFO - r4 = 0x402381d8 r5 = 0x402b7000 r6 = 0x4271d36c r7 = 0x40eae8c5
23:22:03 INFO - r8 = 0x4271bcdc r9 = 0x01bb7b0c r10 = 0x40b3385d fp = 0x40265140
23:22:03 INFO - sp = 0xbecb87a0 pc = 0x40b2ca73
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 41 libxul.so!mozilla::ShutdownXPCOM(nsIServiceManager*) [nsXPComInit.cpp:0ca253c83134 : 932 + 0x3]
23:22:03 INFO - r4 = 0x024db534 r5 = 0x4271bcdc r6 = 0x4271d36c r7 = 0x40eae8c5
23:22:03 INFO - r8 = 0x4271bcdc r9 = 0x01bb7b0c r10 = 0x40b3385d fp = 0x40265140
23:22:03 INFO - sp = 0xbecb87c0 pc = 0x40b7745d
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 42 libxul.so!NS_ShutdownXPCOM [nsXPComInit.cpp:0ca253c83134 : 779 + 0x3]
23:22:03 INFO - r4 = 0x4022f164 r5 = 0xbecb881c r6 = 0x4022f164 r7 = 0x00000000
23:22:03 INFO - r8 = 0x000231ac r9 = 0x40278000 r10 = 0x00000000 fp = 0x00000000
23:22:03 INFO - sp = 0xbecb8810 pc = 0x40b776cf
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 43 libxul.so!ScopedXPCOMStartup::~ScopedXPCOMStartup [nsAppRunner.cpp:0ca253c83134 : 1205 + 0x5]
23:22:03 INFO - r4 = 0x4022f164 r5 = 0xbecb881c r6 = 0x4022f164 r7 = 0x00000000
23:22:03 INFO - r8 = 0x000231ac r9 = 0x40278000 r10 = 0x00000000 fp = 0x00000000
23:22:03 INFO - sp = 0xbecb8818 pc = 0x41e80551
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 44 libxul.so!XREMain::XRE_main(int, char**, nsXREAppData const*) [nsAppRunner.cpp:0ca253c83134 : 4154 + 0x5]
23:22:03 INFO - r4 = 0xbecb886c r5 = 0x00000000 r6 = 0x4022f164 r7 = 0x00000000
23:22:03 INFO - r8 = 0x000231ac r9 = 0x40278000 r10 = 0x00000000 fp = 0x00000000
23:22:03 INFO - sp = 0xbecb8830 pc = 0x41e85377
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 45 libxul.so!XRE_main [nsAppRunner.cpp:0ca253c83134 : 4343 + 0x3]
23:22:03 INFO - r4 = 0x000231ac r5 = 0x40238190 r6 = 0x00000001 r7 = 0x00000000
23:22:03 INFO - r8 = 0xbecb886c r9 = 0x00000001 r10 = 0x00000000 fp = 0x00000000
23:22:03 INFO - sp = 0xbecb8860 pc = 0x41e854f9
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 46 b2g!b2g_main(int, char const**) [nsBrowserApp.cpp:0ca253c83134 : 165 + 0xf]
23:22:03 INFO - r4 = 0x40238190 r5 = 0x00000001 r6 = 0x40238190 r7 = 0x41e854ad
23:22:03 INFO - r8 = 0x00000001 r9 = 0x00000001 r10 = 0x00000000 fp = 0x00000000
23:22:03 INFO - sp = 0xbecb8978 pc = 0x0000a90b
23:22:03 INFO - Found by: call frame info
23:22:03 INFO - 47 b2g!main [B2GLoader.cpp:0ca253c83134 : 221 + 0x7]
23:22:03 INFO - r4 = 0x00000000 r5 = 0xbecbca94 r6 = 0x00000003 r7 = 0x00000009
23:22:03 INFO - r8 = 0x00000001 r9 = 0x000002bb r10 = 0x00000000 fp = 0x00000000
23:22:03 INFO - sp = 0xbecb9a40 pc = 0x0000a50d
23:22:03 INFO - Found by: call frame info
Assignee | ||
Comment 1•10 years ago
|
||
ClientLayerManager is ref count object. So it may be destroyed after all IPC shutdown then it will crash at ClearCachedResources (see above example). So I added ClearCachedResources at Destroy function then we have chance to clear cached resources before all IPC shutdown.
Assignee: nobody → mtseng
Attachment #8483897 -
Flags: review?(nical.bugzilla)
Comment 2•10 years ago
|
||
I've verified that the crash is gone after applying the patch.
Assignee | ||
Comment 3•10 years ago
|
||
Updated•10 years ago
|
Attachment #8483897 -
Flags: review?(nical.bugzilla) → review+
Comment 5•10 years ago
|
||
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
You need to log in
before you can comment on or make changes to this bug.
Description
•