Bug 1062643 - Clear cached resources when ClientLayerManager destroyed. r=nical